[metadata]
name = datacollection
version = 0.1.0
description = Towhee is a framework that helps you encode your unstructured data into embeddings.
long_description = file: README.md
url = https://github.com/towhee-io/towhee
author = Towhee Team
author_email=towhee-team@zilliz.com
license = Apache License Version 2.0
license_file = LICENSE
platforms = unix, linux, osx, win32

[build_sphinx]
project = datacollection
version = 0.8
release = 0.8.0
source-dir = towhee/doc/source

# setup.cfg
[tool:pytest]
minversion = 6.0
addopts = -ra -q --durations=5 --doctest-modules --doctest-glob=*.md --ignore=tests/unittests/utils/test_git_utils.py
log_cli = true
testpaths =
    tests/unittests/
    datacollection/functional/
    datacollection/hparam/

[coverage:run]
branch = true
source = datacollection

[coverage:report]
# show_missing = True
# skip_covered = True
# Ignore missing source files, i.e. fake template-generated "files"
ignore_errors = true
